# 3d-models

./: .gitignore  AGENTS.md  pyproject.toml
examples/airflow150/: louver_demo.py  ocp_demo.py  smoke_test.py
notebooks/: preview_models.ipynb
src/airflow150/: __init__.py  cli.py  louver.py  louver_demo.py  model.py  view.py
src/rtx3090_fan_guard/: __init__.py  main.py  perf_eval.py
targets/: edgehd800.md
tools/: update_preview_models.py
